# gtex-link

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  container-release.json  debug_gtex_response.py  gtex_endpoints_detailed.json  mcp_http_server.py  mcp_server.py  mcp_server_simple.py  pyproject.toml  server.py  setup_gtex_link.sh  test_expression_fixes.py  unified_server.py
.claude/skills/ci-failure-triage/: SKILL.md
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/gtex-api-endpoint-add/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-security.yml  docker.yml  release.yml
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
docs/: README.md  api_v2_admin_maintenanceMessage_get.md  api_v2_admin_newsItem_get.md  api_v2_association_dyneqtl_get.md  api_v2_association_dyneqtl_post.md  api_v2_association_dynieqtl_get.md  api_v2_association_dynisqtl_get.md  api_v2_association_dynsqtl_get.md  api_v2_association_egene_get.md  api_v2_association_fineMapping_get.md  api_v2_association_independentEqtl_get.md  api_v2_association_metasoft_get.md  api_v2_association_sgene_get.md  api_v2_association_singleTissueEqtlByLocation_get.md  api_v2_association_singleTissueEqtl_get.md  api_v2_association_singleTissueIEqtl_get.md  api_v2_association_singleTissueISqtl_get.md  api_v2_association_singleTissueSqtl_get.md  api_v2_biobank_download_get.md  api_v2_biobank_sample_get.md  api_v2_dataset_annotation_get.md  api_v2_dataset_collapsedGeneModelExon_get.md  api_v2_dataset_fileList_get.md  api_v2_dataset_fullCollapsedGeneModelExon_get.md  api_v2_dataset_functionalAnnotation_get.md  api_v2_dataset_ldByVariant_get.md  api_v2_dataset_ld_get.md  api_v2_dataset_openAccessFilesMetadata_get.md  api_v2_dataset_sample_get.md  api_v2_dataset_subject_get.md  api_v2_dataset_tissueSiteDetail_get.md  api_v2_dataset_variantByLocation_get.md  api_v2_dataset_variant_get.md  api_v2_expression_clusteredMedianExonExpression_get.md  api_v2_expression_clusteredMedianGeneExpression_get.md  api_v2_expression_clusteredMedianJunctionExpression_get.md  api_v2_expression_clusteredMedianTranscriptExpression_get.md  api_v2_expression_expressionPca_get.md  api_v2_expression_geneExpression_get.md  api_v2_expression_medianExonExpression_get.md  (+23 more)
docs/superpowers/plans/: 2026-05-11-phase-1-foundation.md  2026-05-11-phase-2-observability-and-tests.md  2026-05-11-phase-3-mcp-facade-and-transport.md  2026-05-25-docker-parity-warning-cleanup.md  2026-05-25-post-sync-stack-agent-parity.md  2026-06-01-pr1-correctness-foundation.md  2026-06-01-pr2-observability-trust.md  2026-06-01-pr3-token-efficiency-chaining.md  2026-06-01-pr4-discoverability-parity.md
docs/superpowers/specs/: 2026-05-11-modernization-design.md  2026-05-25-python-stack-agent-modernization-design.md  2026-06-01-mcp-excellence-design.md
gtex_link/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  logging_config.py  server_manager.py
gtex_link/api/: __init__.py  client.py  url_guard.py
gtex_link/api/routes/: __init__.py  association.py  dependencies.py  expression.py  health.py  reference.py
gtex_link/mcp/: __init__.py  annotations.py  capabilities_resources.py  envelope.py  errors.py  facade.py  metadata.py  next_commands.py  output_validation.py  profiles.py  resources.py  schema_relax.py  search_match.py  service_adapters.py  shaping.py  tissue_stats.py  untrusted_content.py
gtex_link/mcp/tools/: __init__.py  expression.py  reference.py  search_fetch.py
gtex_link/models/: __init__.py  gtex.py  mcp_results.py  requests.py  responses.py
gtex_link/observability/: __init__.py  correlation.py  metrics.py
gtex_link/services/: __init__.py  gtex_service.py
gtex_link/utils/: __init__.py  caching.py
scripts/: check_file_size.py
tests/: __init__.py  conftest.py  test_dockerfile_bootstrap.py
tests/conformance/: conftest.py  test_contract_truth_v1.py  test_http_policy_adapter.py  test_transport_mode.py
tests/fixtures/: gtex_api_responses.py
tests/integration/: test_gtex_workflows.py
tests/test_api/: __init__.py  test_association_routes.py  test_expression_routes.py  test_health.py  test_reference_routes.py
tests/test_client/: __init__.py  test_client_error_sanitation.py  test_client_redirect_guard.py  test_gtex_client_edge_cases.py  test_gtex_client_integration.py
tests/test_mcp/: conftest.py  test_envelope.py  test_errors.py  test_facade.py  test_metadata.py  test_next_commands.py  test_output_validation.py  test_profiles.py  test_provenance_meta.py  test_schema_relax.py  test_search_match.py  test_shaping.py  test_surface_eval.py  test_tissue_stats.py  test_tool_bodies.py  test_tools_expression.py  test_tools_reference.py  test_tools_search_fetch.py
tests/test_models/: __init__.py  test_mcp_results.py  test_schema_literals.py  test_validation.py
tests/test_observability/: test_correlation.py  test_metrics.py
tests/test_services/: __init__.py
tests/unit/: conftest.py  test_app.py  test_caching.py  test_cli.py  test_cli_basic.py  test_config.py  test_config_env_contract.py  test_exceptions.py  test_gtex_service.py  test_health_routes.py  test_host_origin_guard.py  test_logging_config.py  test_logging_config_basic.py  test_models_comprehensive.py  test_no_pii_in_logs.py  test_readme_datasets.py  test_readme_tools.py  test_response_envelope_v1.py  test_server_manager.py  test_tool_names.py  test_version_single_source.py
tests/unit/mcp/: __init__.py  test_error_code_contract.py  test_error_leak_fencing.py  test_error_sanitation.py  test_notfound_guard.py  test_untrusted_content.py  test_untrusted_content_fencing.py
(+2 files in other folders)
