[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtex-link"
version = "0.1.0"
description = "High-performance MCP/API server for GTEx Portal genetic expression database"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GTEx-Link Development Team", email = "dev@gtex-link.org"}
]
maintainers = [
    {name = "GTEx-Link Development Team", email = "dev@gtex-link.org"}
]
keywords = [
    "gtex", "genomics", "expression", "eqtl", "bioinformatics", "api", "mcp",
    "genetics", "variants", "transcriptomics", "research"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    # Web framework and API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # HTTP client and networking
    "httpx>=0.27.0",

    # MCP integration
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",

    # Caching and performance
    "async-lru>=2.0.4",

    # Logging and monitoring
    "structlog>=24.1.0",
    "orjson>=3.10.0",

    # CLI interface
    "typer[rich]>=0.12.0",
    "rich>=13.7.0",

    # Utilities
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",  # For testing

    # Code quality
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",

    # Security
    "bandit>=1.7.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

production = [
    # Production WSGI server
    "gunicorn>=22.0.0",

    # Production monitoring
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[project.urls]
Homepage = "https://github.com/gtex-link/gtex-link"
Documentation = "https://gtex-link.readthedocs.io"
Repository = "https://github.com/gtex-link/gtex-link"
"Bug Tracker" = "https://github.com/gtex-link/gtex-link/issues"
Changelog = "https://github.com/gtex-link/gtex-link/blob/main/CHANGELOG.md"

[project.scripts]
gtex-link = "gtex_link.cli:main"
gtex-mcp = "mcp_server:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gtex_link*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
gtex_link = ["py.typed"]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # FastAPI Query pattern is acceptable
    "B028",   # warnings.warn stacklevel acceptable
    "F401",   # Re-exported imports in __init__.py
    "F403",   # Star imports in __init__.py are acceptable
    "F405",   # Star imports in __init__.py are acceptable
    "B011",   # assert False in tests is acceptable
    "UP035",  # typing.Dict acceptable for compatibility
    "SIM108", # if/else acceptable over ternary for readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["SIM105"]  # Allow try/except/pass in tests
"docs/**/*.py" = ["UP035"]    # Allow typing.Dict in docs

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
single-line-exclusions = ["typing", "collections.abc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow untyped calls for these libraries
[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "fastmcp.*",
    "mcp.*",
    "async_lru.*",
    "orjson.*",
    "structlog.*",
    "rich.*",
    "typer.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=gtex_link",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
    "mcp: marks tests that test MCP functionality",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning:httpx.*",
    "ignore::DeprecationWarning:fastmcp.*",
]

# Coverage configuration
[tool.coverage.run]
source = ["gtex_link"]
omit = [
    "tests/*",
    "gtex_link/__main__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
skip_empty = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"


# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert used in tests
