[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtex-link"
version = "0.2.0"
description = "High-performance MCP/API server for GTEx Portal genetic expression database"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "GTEx-Link Development Team", email = "dev@gtex-link.org" },
]
keywords = [
    "gtex", "genomics", "expression", "eqtl", "bioinformatics", "api", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.46.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "async-lru>=2.0.4,<3.0.0",
    "structlog>=24.4.0,<26.0.0",
    "orjson>=3.10.0,<4.0.0",
    "rich>=15.0.0,<16.0.0",
    "typer>=0.25.1,<1.0.0",
    "mcp[cli]>=1.27.0,<2.0.0",
    "fastmcp>=3.2.0,<4.0.0",
    "gunicorn>=25.3.0,<26.0.0",
    "asgi-correlation-id>=4.3.0,<5.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/gtex-link/gtex-link"
Repository = "https://github.com/gtex-link/gtex-link"
"Bug Tracker" = "https://github.com/gtex-link/gtex-link/issues"
Changelog = "https://github.com/gtex-link/gtex-link/blob/main/CHANGELOG.md"

[project.scripts]
gtex-link = "gtex_link.cli:main"
gtex-link-mcp = "mcp_server:main"
gtex-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["gtex_link"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "S", "T20", "SIM", "RUF",
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # FastAPI Query/Depends pattern
    "S101",   # asserts ok in tests (also per-file-ignores)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S104", "S110", "T20", "B011", "SIM105", "SIM108"]
"docs/**/*.py" = ["UP035", "T20"]
"gtex_link/models/__init__.py" = ["F403", "F405", "RUF022"]
"mcp_server.py" = ["T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    ".*site-packages.*",
    ".*/venv/.*",
    ".*/\\.venv/.*",
    "htmlcov/.*",
]

[[tool.mypy.overrides]]
module = [
    "async_lru.*",
    "structlog.*",
    "mcp.*",
    "fastmcp.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "httpx.*",
    "uvicorn.*",
    "asgi_correlation_id.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
    "mcp: marks tests that test MCP functionality",
]
[tool.coverage.run]
source = ["gtex_link"]
omit = [
    "tests/*",
    "gtex_link/__main__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
